--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Linden Kwok</title>
 </head>
 <body>
-    <h1>Hello, I'm Linden</h1>
+    <h1>Hello, I'm Linden Kwok</h1>
 </body>
 </html>
