Added Styling Framework
Added Styling Framework
Finished About
Started Portfolio

--- a/index.html
+++ b/index.html
@@ -2,10 +2,100 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
     <title>Linden Kwok</title>
 </head>
-<body>
-    <h1>Hello, I'm Linden Kwok</h1>
+<body class="is-preload">
+
+    <!-- Header -->
+    <header id="header">
+        <div class="inner">
+            <a href="#" class="image avatar"><img src="images/Profile-Picture-Rounded.png" alt="" /></a>
+            <h1><strong>Linden Kwok</strong><br />
+            Software Developer<br /></h1>
+        </div>
+    </header>
+	<!-- Main -->
+    <div id="main">
+
+        <!-- One -->
+            <section id="one">
+                <h1>Hello! My Name Is Linden,</h1>
+                <p>I am a solution-oriented software developer with interests in data security, artificial intelligence, and algorithm efficiency. Self-motivated and team focused work attitude.</p>
+                <h3>Skills</h3>
+                <p>C/C++, Python, Java, HTML, CSS, JavaScript, Matlab, TensorFlow, MySQL, Postgres, Git, Docker</p>
+                <h3>Education</h3>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>Simon Fraser University</td>
+                            <td>Bachelor of Science Degree: Computer Science</td>
+                            <td>2017 - 2020</td>
+                        </tr>
+                        <tr>
+                            <td>Langara College</td>
+                            <td>Associate of Science Degree: Computer Science</td>
+                            <td>2014 - 2017</td>
+                        </tr>
+                    </tbody>
+                </table> 
+                <h3>Coursework and Specialization</h3>
+                <p>Artificial Intelligence, Computer Vision, Biomedical Computing, Fullstack Development, Computer Graphics, Algorithm Complexity and Efficiency, Cybersecurity, Database Systems.</p>
+            </section>
+
+        <!-- Two -->
+            <section id="two">
+                <h2>Portfolio</h2>
+				<div class="row">
+                    <article class="col-6 col-12-xsmall work-item">
+                        <span class="image fit"><img src="images/scene3.jpg" alt="raytracer image"></span>
+                        <h3>Simple Raytracer</h3>
+                        <p>Skills: C++, OpenGL, 3D Math, Object Oriented Programming</p>
+                    </article>
+                    <article class="col-6 col-12-xsmall work-item">
+                        <span class="image fit"><img src="images/scene3.jpg" alt="raytracer image"></span>
+                        <h3>Tetris Fruits</h3>
+                        <p>Skills: C++, OpenGL, 3D Math, Object Oriented Programming</p>
+                    </article>
+                    <article class="col-6 col-12-xsmall work-item">
+                        <span class="image fit"><img src="images/scene3.jpg" alt="raytracer image"></span>
+                        <h3>COVID-19 X-Ray Classifcation</h3>
+                        <p>Skills: Python, TensorFlow</p>
+                    </article>
+                    <article class="col-6 col-12-xsmall work-item">
+                        <span class="image fit"><img src="images/Image-reconst.png" alt="raytracer image"></span>
+                        <h3>3D Image Reconstruction</h3>
+                        <p>Skills: C++, OpenGL, 3D Math, Object Oriented Programming</p>
+                    </article>
+                    
+                </div>
+                <ul class="actions">
+                    <li><a href="#" class="button">Full Portfolio</a></li>
+                </ul>
+            </section>
+
+
+<!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <ul class="icons">
+                <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+            </ul>
+            <ul class="copyright">
+                <li>&copy; Linden Kwok</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
+
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
