--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>Artificial Intelligence, Computer Vision, Biomedical Computing, Fullstack Development, Computer Graphics, Algorithm Complexity and Efficiency, Cybersecurity, Database Systems.</p>
             
                 <ul class="actions">
-                    <li><a href="assets/Resume 2020.pdf" class="button">Resume</a></li>
+                    <li><a href="assets/Linden Kwok Resume.pdf" class="button">Resume</a></li>
                 </ul>
             
             </section>
