Added Contact Form
Contact Form added, supported by formspree.io

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body class="is-preload">
 
-    <!-- Header -->
     <header id="header">
         <div class="inner">
             <a href="#" class="image avatar"><img src="images/Profile-Picture-Rounded.png" alt="" /></a>
@@ -16,10 +15,7 @@
             <h1>Software Developer</h1>
         </div>
     </header>
-	<!-- Main -->
     <div id="main">
-
-        <!-- One -->
             <section id="one">
                 <h1>Hello! My Name is Linden,</h1>
                 <p>I am a solution-oriented software developer with interests in data security, artificial intelligence, and algorithm efficiency. Self-motivated and team focused work attitude.</p>
@@ -82,9 +78,33 @@
                     <li><a href="https://github.com/l-kwok" class="button">Github</a></li>
                 </ul>
             </section>
+            
+            <section id="four">
+                <h2>Contact Me:</h2>
+                <form
+                action="https://formspree.io/xeqrzvgv"
+                method="POST"
+                >
+                    <div class="row gtr-uniform gtr-50">
+                        <div class="col-6 col-12-xsmall">
+                            <input type="text" placeholder="Name" />
+                        </div>
+                        <div class="col-6 col-12-xsmall">
+                            <input type="email" name="_replyto" placeholder="Email" />
+                        </div>
+                        <div class="col-12">
+                            <textarea name="message" placeholder="Your message" rows="6"></textarea>
+                        </div>
+                        <div class="col-12">
+                            <ul class="actions">
+                                <li><input type="submit" class="primary" /></li>
+                                <li><input type="reset" value="Reset" /></li>
+                            </ul>
+                        </div>
+                    </div>
+                </form>
+            </section>
 
-
-<!-- Footer -->
     <footer id="footer">
         <div class="inner">
             <ul class="icons">
@@ -97,8 +117,6 @@
         </div>
     </footer>
 
-
-    <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.poptrox.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
