--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         <p>Skills: C++, OpenGL, Object Oriented Programming</p>
                     </article>
                     <article class="col-6 col-12-xsmall work-item">
-                        <span class="image fit"><img src="images/xray.png" alt="X-Ray image"></span></a>
-                        <a href=""></a><h3>COVID-19 X-Ray Classifcation</h3>
+                        <a href="https://github.com/l-kwok/COVID-19-XRAY-CNN"><span class="image fit"><img src="images/xray.png" alt="X-Ray image"></span></a>
+                        <a href="https://github.com/l-kwok/COVID-19-XRAY-CNN"><h3>COVID-19 X-Ray Classifcation</h3></a>
                         <p>Skills: Python, TensorFlow</p>
                     </article>
                     <article class="col-6 col-12-xsmall work-item">
